@@ -32,7 +32,10 @@ installation-guide (2007xxxx) UNRELEASED; urgency=low
     supported.
   * preparing/minimum-hardware-reqts.xml: Pluralise "gigabyte" consistently.
 
- -- Frans Pop <fjp@debian.org>  Fri, 20 Jul 2007 09:23:10 +0200
+  [ Joey Hess ]
+  * Document clock-setup/ntp.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 23 Jul 2007 20:50:32 -0400
 
 installation-guide (20070319) unstable; urgency=low
 
